@@ -5,7 +5,6 @@
  - net.if.stat collected as double, must be as uint64
  - rename screens_items.resource -> resourcetype
  - rename screens.rows ->vsize, cols -> hsize
- - rename audit.resource -> resourcetype
  - http://www.zabbix.com/forum/showthread.php?t=2682
  - http://www.zabbix.com/forum/showthread.php?t=2680
  - http://www.zabbix.com/forum/showthread.php?t=2675
