@@ -471,7 +471,7 @@ CREATE TABLE auditlog (
   userid		int(4)		DEFAULT '0' NOT NULL,
   clock			int(4)		DEFAULT '0' NOT NULL,
   action		int(4)		DEFAULT '0' NOT NULL,
-  resource		int(4)		DEFAULT '0' NOT NULL,
+  resourcetype		int(4)		DEFAULT '0' NOT NULL,
   details		varchar(128)	DEFAULT '0' NOT NULL,
   PRIMARY KEY (auditid),
   KEY (userid,clock),
